--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-
+/*@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+         --ADD THIS LINE LATER!
+*/
 :root{
     --black:#16161d;
     --light-black:#242430;
     --white:#dedede;
     --blue: #6868ff;
 }
+
 h1,h2,h3,h4,p{
     cursor:default;
 }
